--- a/src/main/resources/templates/updateArticle.html
+++ b/src/main/resources/templates/updateArticle.html
@@ -116,7 +116,7 @@
       <button type="submit" class="btn btn-primary">Enregistrer</button>
       <a th:href="@{/sales/deleteArticle/{id}(id=*{soldArticles.idArticle})}"
          class="btn btn-alert"
-         onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
+         onclick="return confirm('Est tu sûr de vouloir supprimer cet article ?')">
         Supprimer l'article
       </a>
       <a class="btn btn-secondary" data-th-href="@{/}">
