--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,9 +60,13 @@
 					</div>
 
 					<div class="article-actions">
-						<a class="details-btn" th:if="${#authorization.expression('isAuthenticated()')}"
+						<a class="details-btn" th:if="${#authorization.expression('isAuthenticated()') && (item.soldArticles.startDateAuctions.isBefore(T(java.time.LocalDate).now()) ||
+						 item.soldArticles.startDateAuctions.isEqual(T(java.time.LocalDate).now()))}"
 						   data-th-href="@{/sales/detail(id=${item.soldArticles.idArticle})}">
-							Détail de la vente
+							Détail / Enchérir
+						</a>
+						<a class="details-btn" th:if="${#authorization.expression('isAuthenticated()') && (item.soldArticles.startDateAuctions.isAfter(T(java.time.LocalDate).now()))}">
+							Détail
 						</a>
 						<a class="details-btn-modify"
 						   th:if="${#authorization.expression('isAuthenticated()') &&
