--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -61,13 +61,14 @@
 						</div>
 
 						<div class="form-group">
-							<h5>Crédits disponibles : <span data-th-text="*{credit}"></span></h5>
+							<h5 th:unless="${isSeller}">Crédits disponibles : <span data-th-text="*{credit}"></span></h5>
 						</div>
 
 						<div class="form-group">
 							<h5>
-								<span data-th-text="*{road}"></span><br><br>
-								<span data-th-text="*{zipPass}"></span><br><br>
+								Adresse : <br><br>
+								<span data-th-text="*{road}"></span><br>
+								<span data-th-text="*{zipPass}"></span><br>
 								<span data-th-text="*{city}"></span>
 							</h5>
 						</div>
