--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" data-th-href="@{/css/main.css}">
 			<link rel="stylesheet" data-th-href="@{/css/error.css}">
 			<title>ENI Enchères - Mise en Vente</title>
-			<link rel="icon" data-th-href="@{/images/logoEnchere-1.png}" />
+			<link rel="icon" data-th-href="@{/images/LogoEnchere-1.png}" />
 		</head>
 		<body>
 		<header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
