--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" data-th-href="@{/css/main.css}">
             <title>ENI Enchères - Connexion</title>
-            <link rel="icon" data-th-href="@{/images/logoEnchere-1.png}" />
+            <link rel="icon" data-th-href="@{/images/LogoEnchere-1.png}" />
             <link rel="stylesheet" th:href="@{/css/main.css}">
             <link rel="stylesheet" th:href="@{/css/error.css}">
         </head>
