--- a/src/main/resources/templates/updateArticle.html
+++ b/src/main/resources/templates/updateArticle.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" data-th-href="@{/css/main.css}">
   <link rel="stylesheet" data-th-href="@{/css/error.css}">
   <title>ENI Enchères - Mise à jour du profil</title>
-  <link rel="icon" data-th-href="@{/images/logoEnchere-1.png}" />
+  <link rel="icon" data-th-href="@{/images/LogoEnchere-1.png}" />
 </head>
 <body>
 <header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
@@ -75,14 +75,14 @@
         <div data-th-replace="~{fragments/fragment-error :: frag-error('soldArticles.startDateAuctions')}"></div>
         <label for="startDateAuctions">Date de début</label>
         <input type="date" id="startDateAuctions" class="form-control"
-               th:field="*{soldArticles.startDateAuctions}" />
+          th:field="*{soldArticles.startDateAuctions}"/>
       </div>
 
       <div class="form-group">
         <div data-th-replace="~{fragments/fragment-error :: frag-error('soldArticles.endDateAuctions')}"></div>
         <label for="endDateAuctions">Date de fin</label>
         <input type="date" id="endDateAuctions" class="form-control"
-               th:field="*{soldArticles.endDateAuctions}" />
+          th:field="*{soldArticles.endDateAuctions}"/>
       </div>
 
 
